# QUDevice

./: .clang-format  CMakeLists.txt  README.md
devices/quasyncserialport/: CMakeLists.txt
devices/quasyncserialport/include/: quasyncserialport.h  quasyncserialportbuilder.h  quasyncserialportconfiguration.h  quasyncserialportwidget.h
devices/quasyncserialport/src/: quasyncserialport.cpp  quasyncserialportbuilder.cpp  quasyncserialportconfiguration.cpp  quasyncserialportwidget.cpp
devices/quasyncudp/: CMakeLists.txt
devices/quasyncudp/include/: quasyncudp.h  quasyncudpbuilder.h  quasyncudpconfiguration.h  quasyncudpwidget.h
devices/quasyncudp/src/: quasyncudp.cpp  quasyncudpbuilder.cpp  quasyncudpconfiguration.cpp  quasyncudpwidget.cpp
devices/qublockingserialport/: CMakeLists.txt
devices/qublockingserialport/include/: qublockingserialport.h  qublockingserialportbuilder.h  qublockingserialportconfiguration.h  qublockingserialportwidget.h
devices/qublockingserialport/src/: qublockingserialport.cpp  qublockingserialportbuilder.cpp  qublockingserialportconfiguration.cpp  qublockingserialportwidget.cpp
devices/qublockingudp/: CMakeLists.txt
devices/qublockingudp/include/: qublockingudp.h  qublockingudpbuilder.h  qublockingudpconfiguration.h  qublockingudpwidget.h
devices/qublockingudp/src/: qublockingudp.cpp  qublockingudpbuilder.cpp  qublockingudpconfiguration.cpp  qublockingudpwidget.cpp
devices/qumodbusmaster/: CMakeLists.txt
devices/qumodbusmaster/include/: qumodbusmaster.h  qumodbusmasterconfiguration.h  qumodbusmasterwidget.h
devices/qumodbusmaster/src/: qumodbusmaster.cpp  qumodbusmasterconfiguration.cpp  qumodbusmasterregistermodel.cpp  qumodbusmasterwidget.cpp
devices/qutcpclient/: CMakeLists.txt
devices/qutcpclient/include/: qutcpclient.h  qutcpclientbuilder.h  qutcpclientconfiguration.h  qutcpclientwidget.h
devices/qutcpclient/src/: qutcpclient.cpp  qutcpclientbuilder.cpp  qutcpclientconfiguration.cpp  qutcpclientwidget.cpp
devices/qutcpserver/: CMakeLists.txt
devices/qutcpserver/include/: qutcpserver.h  qutcpserverbuilder.h  qutcpserverconfiguration.h  qutcpserverwidget.h
devices/qutcpserver/src/: qutcpserver.cpp  qutcpserverbuilder.cpp  qutcpserverconfiguration.cpp  qutcpserverwidget.cpp
docs/: USAGE.md
include/: quconfiguration.h  qudevice.h  qudevice_export.h  quwidget.h
src/: quconfiguration.cpp  qudevice.cpp  quwidget.cpp
